--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,7 @@ header h1 {
   gap: 10px;
 }
 header h1 img {
-  width: 40px;
+  width: 60px;
   height: auto;
 }
 nav {
@@ -240,26 +240,34 @@ li {
 }
 @media (max-width: 768px) {
   header h1 {
-    font-size: 2rem;
+    font-size: 1.2rem;
+    gap: 2px;
   }
   nav ul {
     flex-direction: column;
-    gap: 10px;
+    gap: 1px;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding: 1px;
+    margin-top: 0;
+
   }
-  nav ul li a {
-    font-size: 1rem;
-  }
+
   main{
-    margin-top: 250px;
+    margin-top: 200px;
   }
+
+ 
+  header h1 img {
+    width: 20px;
+    height: auto;
+  
 }
+}
+
 @media (max-width: 480px) {
-  header h1 {
-    font-size: 1.5rem;
-  }
-  nav ul li a {
-    font-size: 0.9rem;
-  }
+
   main{
     margin-top: 220px;
   }
