--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
   border-radius: 50%;
   opacity: 0.8;
   animation: blink 2s infinite ease-in-out;
+  
 }
 .star:nth-child(1) {
   top: 20%;
@@ -130,15 +131,16 @@ body {
   margin: 0;
   background-size: cover;
   background-attachment: fixed;
+  height: 100%
 }
 .stars {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
-  overflow: hidden;
+  height: 100%;
   z-index: -1;
+  overflow: hidden;
 }
 header {
   background: linear-gradient(135deg, var(--fiolet-jasny), var(--fiolet-ciemny));
@@ -193,6 +195,8 @@ section {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  opacity: 0.8;
+
 }
 footer {
   padding: 10px;
@@ -242,6 +246,7 @@ li {
   header h1 {
     font-size: 1.5rem;
     gap: 1px;
+  
   }
   header h1 img {
     width: 20px;
@@ -254,6 +259,8 @@ li {
     display: flex;
     justify-content: center;
     padding: 1px;
+    margin-left: 10px;
+    margin-right: 20px;
     margin-top: 0;
     font-size: 0.5rem;
   }
